--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "yep-ui",
+  "version": "0.0.1",
   "main": "dist/yep-ui.mjs",
   "module": "dist/yep-ui.mjs",
   "typings": "dist/index.d.ts",
