--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,18 @@
     "moduleResolution": "node",
     "declaration": true,
     "emitDeclarationOnly": true,
+    "composite": true,
     "sourceMap": true,
     "baseUrl": "./",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": false,
-    "types": ["vite/client"],
     "lib": ["DOM", "ESNext", "DOM.Iterable"],
     "isolatedModules": true,
     "skipLibCheck": true,
     "allowJs": true
   },
-  "include": ["src", "shims-vue.d.ts", "env.d.ts"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 
 }
