--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,10 @@
     "build": "vitepress build ."
   },
   "devDependencies": {
-    "vite": "^4.1.1",
+    "unocss": "^0.49.5",
+    "unplugin-vue-components": "^0.24.0",
+    "vite": "^4.1.2",
+    "vite-plugin-inspect": "^0.7.15",
     "vitepress": "1.0.0-alpha.46",
     "vue": "^3.2.47"
   }
