--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,12 @@
     "dev": "vitepress dev .",
     "build": "vitepress build ."
   },
+  "dependencies": {
+    "markdown-it-container": "^3.0.0"
+  },
   "devDependencies": {
+    "@iconify-json/bx": "^1.1.6",
+    "@iconify-json/carbon": "^1.1.11",
     "unocss": "^0.49.5",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.2",
