--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "doc"
-  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build && vue-tsc --declaration --emitDeclarationOnly`",
     "serve": "vite preview",
     "docs:dev": "pnpm run -C docs dev",
     "docs:build": "pnpm run -C docs build",
-    "tsupbuild": "vue-tsc --noEmit && tsup src/index.ts --dts --format esm,cjs --external vue"
+    "play": "pnpm -C playground run dev"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@yep-ui/components": "workspace:*",
+    "@yep-ui/playground": "workspace:*",
+    "@yep-ui/preset-theme": "workspace:*",
     "date-fns": "^2.29.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
-    "@iconify-json/carbon": "^1.1.11",
     "@types/node": "^18.13.0",
-    "@unocss/eslint-config": "^0.49.4",
-    "@unocss/preset-icons": "^0.48.4",
-    "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.32.0",
-    "tsup": "^6.6.3",
     "typescript": "^4.9.4",
-    "unocss": "^0.48.4",
+    "unbuild": "^1.1.2",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.24"
   },
