--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,28 @@
 {
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "lib": ["DOM", "ESNext", "DOM.Iterable"],
-    "isolatedModules": true,
-    "skipLibCheck": true
+    "target": "esnext",
+    "module": "esnext",
+    "lib": [
+      "esnext"
+    ],
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "resolveJsonModule": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    "noUncheckedIndexedAccess": true,
+    "jsx": "preserve",
+    "types": [
+      "node"
+    ]
   },
-  "include": ["packages", "App.vue"],
+  "paths": {
+    "@yep-ui": ["packages/*"]
+  },
   "exclude": [
-    "node_modules",
-    "**/dist",
-    "**/tests/**/*",
-    "**/*.md"
+    "**/dist/**",
+    "**/node_modules/**"
   ]
-
 }
