core:update unocss

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "unocss.root": ["docs", "playground"]
+  "unocss.root": ["playground", "docs"]
 }
