--- a/packages/preset-theme/package.json
+++ b/packages/preset-theme/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "private": false,
   "description": "Yep UI Uno preset",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.cjs",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
@@ -15,6 +15,6 @@
     "stub": "unbuild --stub"
   },
   "devDependencies": {
-    "unocss": "^0.49.5"
+    "unocss": "^0.50.0"
   }
 }
