--- a/playground/package.json
+++ b/playground/package.json
@@ -5,8 +5,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "unocss": "^0.49.5",
+    "unocss": "^0.50.0",
     "vite": "^4.1.2",
-    "yep-ui": "workspace:*"
+    "vue": "^3.2.47"
   }
 }
