--- a/packages/preset-theme/package.json
+++ b/packages/preset-theme/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": false,
   "description": "Yep UI Uno preset",
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
