--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,20 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "src",
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "lib": [
-      "esnext",
-      "dom"
-    ],
-    "skipLibCheck": true
-  }
+    "lib": ["ESNext", "DOM"]
+  },
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue"]
 }
