--- a/playground/package.json
+++ b/playground/package.json
@@ -1,12 +1,19 @@
 {
   "name": "@yep-ui/playground",
+  "private": true,
   "scripts": {
     "dev": "vite"
   },
+  "dependencies": {
+    "vue": "^3.2.47"
+  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "typescript": "^4.9.5",
     "unocss": "^0.50.0",
+    "unplugin-auto-import": "^0.15.0",
+    "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.2",
-    "vue": "^3.2.47"
+    "vite-plugin-inspect": "^0.7.15"
   }
 }
