--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,10 +1,8 @@
 {
-  // "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "isolatedModules": true,
-    "types": ["vite/client"]
+    "lib": ["esnext", "dom"]
   },
-  "include": ["**/*.ts", "*.vue"],
-  "exclude": ["node_modules"]
+  "exclude": ["**/dist/**"],
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue"]
 }
