--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2018",
     "module": "esnext",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
@@ -12,17 +10,22 @@
     "resolveJsonModule": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
-    "noUncheckedIndexedAccess": true,
     "jsx": "preserve",
     "types": [
-      "node"
-    ]
-  },
-  "paths": {
-    "@yep-ui": ["packages/*"]
+      "node",
+      "vite/client"
+    ],
+    "rootDir": ".",
+    "baseUrl": ".",
+    "outDir": "dist",
+    "paths": {
+      "@yep-ui/*": ["packages/*"],
+      "yep-ui": ["packages/yep-ui/index.ts"]
+    }
   },
   "exclude": [
     "**/dist/**",
     "**/node_modules/**"
+
   ]
 }
