--- a/docs/package.json
+++ b/docs/package.json
@@ -7,16 +7,18 @@
     "build": "vitepress build ."
   },
   "dependencies": {
-    "markdown-it-container": "^3.0.0"
+    "@yep-ui/preset-theme": "workspace:*",
+    "vue": "^3.2.47",
+    "yep-ui": "workspace:*"
   },
   "devDependencies": {
     "@iconify-json/bx": "^1.1.6",
     "@iconify-json/carbon": "^1.1.11",
+    "markdown-it-container": "^3.0.0",
     "unocss": "^0.50.0",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.2",
     "vite-plugin-inspect": "^0.7.15",
-    "vitepress": "1.0.0-alpha.46",
-    "vue": "^3.2.47"
+    "vitepress": "1.0.0-alpha.46"
   }
 }
