--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
+  "name": "@yep-ui/monorepo",
+  "type": "module",
+  "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "docs",
-    "playground"
-  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build && vue-tsc --declaration --emitDeclarationOnly`",
@@ -18,15 +16,7 @@
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "@yep-ui/components": "workspace:*",
-    "@yep-ui/hooks": "workspace:*",
-    "@yep-ui/playground": "workspace:*",
-    "@yep-ui/preset-theme": "workspace:*",
-    "@yep-ui/tokens": "workspace:*",
-    "@yep-ui/utils": "workspace:*",
-    "date-fns": "^2.29.3",
-    "yep-ui": "workspace:*"
+
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
