--- a/packages/preset-theme/package.json
+++ b/packages/preset-theme/package.json
@@ -4,17 +4,24 @@
   "version": "0.0.1",
   "private": false,
   "description": "Yep UI Uno preset",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
+  "filds": [
+    "dist",
+    "*.d.ts"
   ],
   "scripts": {
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
   "devDependencies": {
-    "unocss": "^0.50.0"
+    "@unocss/core": "^0.50.1"
   }
 }
