--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@yep-ui/docs",
   "type": "module",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vitepress dev .",
@@ -16,6 +17,7 @@
     "@iconify-json/carbon": "^1.1.11",
     "markdown-it-container": "^3.0.0",
     "unocss": "^0.50.0",
+    "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.2",
     "vite-plugin-inspect": "^0.7.15",
