--- a/docs/package.json
+++ b/docs/package.json
@@ -19,8 +19,6 @@
     "unocss": "^0.50.0",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0",
-    "vite": "^4.1.2",
-    "vite-plugin-inspect": "^0.7.15",
-    "vitepress": "1.0.0-alpha.46"
+    "vite-plugin-inspect": "^0.7.15"
   }
 }
