--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   "peerDependencies": {
     "vue": "^3.2.0"
   },
-  "dependencies": {
-
-  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
     "@types/node": "^18.13.0",
     "eslint": "^8.32.0",
     "typescript": "^4.9.4",
     "unbuild": "^1.1.2",
+    "vite": "^4.1.2",
+    "vitepress": "1.0.0-alpha.48",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.24"
   },
