--- a/packages/yep-ui/package.json
+++ b/packages/yep-ui/package.json
@@ -15,6 +15,7 @@
     "watch": "npm run build --watch src"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "vue": "^3.2.47"
   },
   "devDependencies": {
