--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vitepress dev .",
-    "build": "vitepress build ."
+    "dev": "vitepress dev",
+    "build": "vitepress build",
+    "serve": "vitepress serve"
   },
   "dependencies": {
     "@yep-ui/preset-theme": "workspace:*",
@@ -14,11 +15,12 @@
   },
   "devDependencies": {
     "@iconify-json/bx": "^1.1.6",
-    "@iconify-json/carbon": "^1.1.11",
+    "@iconify-json/ph": "^1.1.4",
     "markdown-it-container": "^3.0.0",
-    "unocss": "^0.50.0",
+    "unocss": "^0.50.3",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0",
-    "vite-plugin-inspect": "^0.7.15"
+    "vite-plugin-inspect": "^0.7.15",
+    "vitepress": "1.0.0-alpha.48"
   }
 }
