--- a/packages/yep-ui/package.json
+++ b/packages/yep-ui/package.json
@@ -24,8 +24,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "unplugin-auto-import": "^0.15.0",
-    "unplugin-vue-components": "^0.24.0",
-    "vite": "^4.1.2",
-    "vite-plugin-dts": "^2.0.2"
+    "unplugin-vue-components": "^0.24.0"
   }
 }
