--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "lib": ["esnext", "dom"],
     "paths": {
-      "@yep-ui/*": ["../packages/yep-ui/*"],
-      "yep-ui": ["../packages/yep-ui"]
+      // "@yep-ui/*": ["../packages/yep-ui/*"],
+      // "yep-ui": ["../packages/yep-ui"]
     }
   },
   "exclude": ["**/dist/**"],
