--- a/packages/yep-ui/package.json
+++ b/packages/yep-ui/package.json
@@ -14,11 +14,12 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "vue": "^3.2.47"
+    "@popperjs/core": "^2.11.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "jsdom": "^21.1.0",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0"
   }
